--- a/template/before.sh.erb
+++ b/template/before.sh.erb
@@ -1,6 +1,8 @@
 # Export the module function if it exists
 [[ $(type -t module) == "function" ]] && export -f module
 
+export PATH="/opt/code-server/code-server-4.104.2-linux-amd64/bin:$PATH"
+
 # Find available port to run server on
 export port=$(find_port ${host})
 
@@ -10,4 +12,4 @@ export host="${host}"
 # Generate SHA1 encrypted password (requires OpenSSL installed)
 export password="$(create_passwd 16)"
 
-export code_server_version="<%= context.auto_modules_app_code_server.split('/').last %>"
+export code_server_version="4.104.2"
