change default path.

--- a/form.yml.erb
+++ b/form.yml.erb
@@ -119,8 +119,8 @@ attributes:
   working_dir:
     widget: "path_selector"
     label: "Working Directory"
-    cacheable: false
     directory: "<%= ENV['HOME'] %>"
+    value: "<%= ENV['HOME'] %>"
     display: true
 
   modules:
