--- a/view.html.erb
+++ b/view.html.erb
@@ -1,33 +1,22 @@
-<%
-  require 'digest'
-
-  # Generate form id, based on host and port
+<%-
+  # generate form id, based on host and port
   form_id = Digest::SHA1.hexdigest("--" + host.to_s + "--" + port.to_s + "--")
+-%>
 
-  # Generate SHA256 digest of Code Server Password
-  cookieValue = Digest::SHA256.hexdigest(password)
-%>
-
-<script type="text/javascript">
-(function () {
-  let date = new Date()
-  date.setTime(date.getTime() + (1*24*60*60*1000))
-  let expires = "expires=" + date.toUTCString()
-  let cookiePath = "path=/rnode/" + "<%= host.to_s %>" + "/" + "<%= port.to_s %>/";
-  /**
-    We have to use "key" as the cookie name since upstream in cdr/code-server
-    the authentication cookie is hard coded "key"
-  */
-  let cookie = `key=<%= cookieValue %>;${expires};${cookiePath};secure`;
-  document.cookie = cookie;
-})();
+<script>
+function setCookie(cname, cvalue, exdays) {
+    var d = new Date();
+    d.setTime(d.getTime() + (exdays*24*60*60*1000));
+    var expires = "expires="+ d.toUTCString();
+    document.cookie = cname + "=" + cvalue + "; " + expires + "; path=/rnode/<%= host %>/<%= port %>; secure";
+}
+// find closest anscestor with .card class, to get session id
+var s = document.getElementById("<%= form_id %>").closest(".card").getAttribute("data-id");
+setCookie("_ood_token_" + s, "<%= password %>", 7)
 </script>
 
-
-<form id="<%= form_id %>" action="/rnode/<%= host %>/<%= port %>/login?to=" method="post" target="_blank">
-  <input type="hidden" name="password" value="<%= password %>">
-
+<form id="<%= form_id %>" action="/rnode/<%= host %>/<%= port %>/" method="post" target="_blank">
   <button class="btn btn-primary" type="submit">
-    <i class="fa fa-cogs"></i> Connect to VS Code
+    <i class="fa fa-eye"></i> Connect
   </button>
 </form>
